add edit to form

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="container">
         <form action="post" class="insert">
+            <input type="text" id="id" hidden>
             <label for="user">User name</label>
             <input type="text" name="userName" id="user">
             <label for="key">api key</label>
